@@ -1,5 +1,5 @@
 <?php
-// $Id: index.php,v 1.76 2003/11/25 19:26:20 dries Exp $
+// $Id: index.php,v 1.77 2003/12/16 21:06:33 dries Exp $
 
 include_once "includes/bootstrap.inc";
 drupal_page_header();
@@ -13,7 +13,7 @@ if (menu_active_handler_exists()) {
   menu_execute_active_handler();
 }
 else {
-  print theme("page", "");
+  drupal_not_found();
 }
 
 drupal_page_footer();
